error messages fixed on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -23,7 +23,9 @@
     color: white;
   }
 }
-
+#choogle-errors {
+  margin-top: 15px;
+}
 #choogle-errors p {
   color: $paradise-pink;
   font-size: 15px;
